Updating documentation and stylesheet with latest version.

--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ Description: The next generation WordPress theme for Arizona State University. P
 
 Text Domain: pitchfork-fork
 
-Version: 0.1.2
+GitHub Theme URI: https://github.com/asuengineering/pitchfork/
+
+Version: 0.2
 
 ------ Licensing -------
 License: GNU General Public License v2 or later
