--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -49,7 +49,7 @@ $nav-text-hover: #ffb310;
     padding: 0;
     background-color: $nav-bg;
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 500;
     font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     background-color: $nav-bg;
     color: $nav-text;
@@ -59,7 +59,7 @@ $nav-text-hover: #ffb310;
             font-size: 16px;
             font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
             border-bottom: 0px;
-            font-weight: 400;
+            font-weight: 7x 00;
             padding: 1rem;
             color: $nav-text;
         }
@@ -113,7 +113,7 @@ $nav-text-hover: #ffb310;
     }
 }
 
-/* =======================================================
+/* ====================================================
   ASU Super Footer area
   Super Footer Widget styles
   ASU Footer (Global)
