--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -1,4 +1,4 @@
-// @import "theme/theme_variables";
+@import "theme/theme_variables";
 // <--------- Add your variables into this file. Also add variables to overwrite Bootstrap or UnderStrap variables here
 
 // ASU Web Standards. Variable overrides, additional styles.
